--- a/frontend/src/components/TaskCard.css
+++ b/frontend/src/components/TaskCard.css
@@ -1,3 +1,80 @@
-.background {
-    background: linear-gradient(#4f4ff4, #fff);  
+
+
+.card-wrap{
+  width: 320px;
+  min-height: 400px;
+  background: #fff;
+  border-radius: 20px;
+  border: 5px solid #fff;
+  overflow: hidden;
+  color: var(--color-text);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+              rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+.card-wrap:hover{
+  transform: scale(1.1);
+}
+.card-header{
+  height: 200px;
+  width: 100%;
+  background: red;
+  border-radius:100% 0% 100% 0% / 0% 50% 50% 100%;
+  display: grid;
+  place-items: center;
+
+}
+
+.card-header i{
+  color: #fff;
+  font-size: 72px;
+}
+.card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
+.card-title{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-weight: bold;
+}
+.card-text{
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 20px;
+  height: 50px
+}
+
+.card-date{
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 20px;
+  height: 50px;
+  margin-top: 4px;
+}
+
+.card-footer {
+  text-align: center;
+}
+.card-btn{
+  border: none;
+  border-radius: 100px;
+  padding: 5px 30px;
+  color: #fff;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+.card-header.incompleted{
+  background: linear-gradient(to bottom left, var(--card1-gradient-color1), var(--card1-gradient-color2));
+}
+.card-header.completed{
+  background: linear-gradient(to bottom left, var(--card4-gradient-color1), var(--card4-gradient-color2));
 }
